--- a/app/src/main/res/layout/tfe_ic_activity_camera.xml
+++ b/app/src/main/res/layout/tfe_ic_activity_camera.xml
@@ -40,12 +40,18 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
-            android:background="@color/tfe_semi_transparent">
-
-            <ImageView
+            android:background="#48187040">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/tfl2_logo" />
+                android:text="Succulent Disease Classification"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"/>
+
+<!--            <ImageView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/daengo_background" />-->
         </androidx.appcompat.widget.Toolbar>
 
     </RelativeLayout>
